suppression champs categorie a l'affichage

--- a/pfirst/src/app/former-service/former-service.component.html
+++ b/pfirst/src/app/former-service/former-service.component.html
@@ -1,7 +1,7 @@
 <table cellpadding="5" width="100%">
   <tr>
     <td>
-      <p class="formerServP"> Le {{datepipe.transform(date, 'yyyy/MM/dd')}}, {{par}} a aidé {{pour}} à {{categorie.toLowerCase()}} !</p>
+      <p class="formerServP"> Le {{datepipe.transform(date, 'yyyy/MM/dd')}}, {{par}} a aidé {{pour}} !</p>
     </td>
     <td align="right">
       <img class="icone-cat" [src]="imgSrc">
