--- a/pfirst/src/app/activity/activity.component.html
+++ b/pfirst/src/app/activity/activity.component.html
@@ -1,3 +1,9 @@
+<body>
+<div class="jumbotron text-center">
+  <h1 class="display-4 text-white">Mon activité</h1>
+  <h2 class="text-white">Retrouvez le suivi de vos demandes de services et de vos propositions d'aide</h2>
+</div>
+
 <table align="center" width="1800px">
   <tr>
     <!-- ###################### LISTE DES SERVICES EN COURS ############################""""-->
@@ -162,4 +168,9 @@
       </div>
     </div>
   </tr>
+</table>
+</body>
+
+<table align="right">
+  <img id="pile" src="../../assets/data/ACCUEIL/pile.png" alt="">
 </table>
