puting only the adress and contry works

--- a/pfirst/src/app/menage-single/menage-single.component.html
+++ b/pfirst/src/app/menage-single/menage-single.component.html
@@ -55,8 +55,8 @@
         <td *ngIf="copied"><i>Liste copiée.</i></td>
       </tr>
       <tr>
-        <td><h2>Localisation: </h2></td>
-        <td>{{Localisation}}</td>
+        <td><h2>Ville: </h2></td>
+        <td>{{City}}</td>
       </tr>
 
       <tr>
