mise en place nouveau design historique + getAssignees #30

--- a/pfirst/src/app/former-service/former-service.component.html
+++ b/pfirst/src/app/former-service/former-service.component.html
@@ -1,6 +1,24 @@
 <table cellpadding="5" width="100%">
   <tr>
     <td>
+      <mat-toolbar color="primary">
+        <mat-toolbar-row>
+          <span>Custom Toolbar</span>
+        </mat-toolbar-row>
+
+        <mat-toolbar-row>
+          <span>Second Line</span>
+          <span class="example-spacer"></span>
+          <mat-icon class="example-icon" aria-hidden="false" aria-label="Example user verified icon">verified_user</mat-icon>
+        </mat-toolbar-row>
+
+        <mat-toolbar-row>
+          <span>Third Line</span>
+          <span class="example-spacer"></span>
+          <mat-icon class="example-icon" aria-hidden="false" aria-label="Example heart icon">favorite</mat-icon>
+          <mat-icon class="example-icon" aria-hidden="false" aria-label="Example delete icon">delete</mat-icon>
+        </mat-toolbar-row>
+      </mat-toolbar>
       <p class="formerServP"> Le {{datepipe.transform(date, 'yyyy/MM/dd')}}, {{par}} a aidé {{pour}} !</p>
     </td>
     <td align="right">
