--- a/pfirst/src/app/new-menage/new-menage.component.html
+++ b/pfirst/src/app/new-menage/new-menage.component.html
@@ -15,7 +15,8 @@
               <div class= "form-group">
                 <label for="datejour"> <h2>Quand souhaitez vous que quelqu'un vienne vous aider a faire le menage (Date et heure)</h2></label>
                 <label for="datejour">Jour</label>
-              <input type="date" id="datejour" class="form-control" formControlName="datejour" >
+              <input type="date" id="datejour" class="form-control" formControlName="datejour" [min]="this.date" >
+              <p>{{this.date}}</p>
               <label for="dateheure">Heure</label>
                 <input type="time" id="dateheure" class="form-control" formControlName="dateheure" >
                 
