add date and geoloc to cuisine

--- a/pfirst/src/app/new-menage/new-menage.component.html
+++ b/pfirst/src/app/new-menage/new-menage.component.html
@@ -13,10 +13,9 @@
   
               <!--#############DISPO######################-->
               <div class= "form-group">
-                <label for="datejour"> <h2>Quand souhaitez vous que quelqu'un vienne vous aider a faire le menage (Date et heure)</h2></label>
+                <label for="datejour"> <h2>Date et heure</h2></label>
                 <label for="datejour">Jour</label>
               <input type="date" id="datejour" class="form-control" formControlName="datejour" [min]="this.date" >
-              <p>{{this.date}}</p>
               <label for="dateheure">Heure</label>
                 <input type="time" id="dateheure" class="form-control" formControlName="dateheure" >
                 
