--- a/pfirst/src/app/new-cuisine/new-cuisine.component.html
+++ b/pfirst/src/app/new-cuisine/new-cuisine.component.html
@@ -10,11 +10,13 @@
                   </div>
 
 
-                <div class= "form-group">
+                  <div class= "form-group">
+                    <label for="datejour"> <h2>Date et heure</h2></label>
                     <label for="datejour">Jour</label>
-                    <input type="date" id="datejour" class="form-control" formControlName="datejour" >
-                    <label for="dateheure">Heure</label>
+                  <input type="date" id="datejour" class="form-control" formControlName="datejour" [min]="this.date" >
+                  <label for="dateheure">Heure</label>
                     <input type="time" id="dateheure" class="form-control" formControlName="dateheure" >
+                    
                   </div>
 
 
@@ -28,12 +30,12 @@
                   </div>
 
 
-                  <div class="form-group">
-                    <label for ="city" ><h2>Ville</h2></label>
-                    <input type="text" id="city" class="form-control" formControlName="city">
-                    <label for ="adress" ><h2>Adresse</h2></label>
-                    <input type="text" id="adress" class="form-control" formControlName="adress">
-                  </div>
+                  <label for ="city" ><h3>Ville</h3></label>
+                <input type="text" id="city" class="form-control" formControlName="city">
+                <label for ="adress" ><h3>Adresse</h3></label>
+                <input type="text" id="adress" class="form-control" formControlName="adress">
+                <label for ="location" ><h3>Localisation</h3></label>
+                <button  type="button" id = "location-button"  (click)= "loca=true" class="btn btn-secondary" >Get your position</button>     
                 
                 
 
