--- a/pfirst/src/app/profil/profil.component.html
+++ b/pfirst/src/app/profil/profil.component.html
@@ -60,7 +60,9 @@
             <td>
               <p>Dernier service rendu : <!-- type et date --></p>
               <p>Dernier service demandé : <!-- type et date --></p>
-              <app-services-experience [id_user]="this.id" style="width: 100%;"></app-services-experience>
+              <app-services-experience [id_user]="id"
+                                       style="width: 100%;">
+              </app-services-experience>
             </td>
           </tr>
         </table>
