--- a/pfirst/src/app/profil/profil.component.html
+++ b/pfirst/src/app/profil/profil.component.html
@@ -26,8 +26,6 @@
                   <span id="text_info" style="width: 200px" class="badge badge-pill badge-secondary" *ngIf="rank == 'Débutant'">{{rank}}</span>
                   <span id="text_info" style="width: 200px" class="badge badge-pill badge-primary" *ngIf="rank == 'Confirmé'">{{rank}}</span>
                   <span id="text_info" style="width: 200px" class="badge badge-pill badge-warning" *ngIf="rank == 'Expert'">{{rank}}</span>
-
-
           </span>
         </tr>
       </table>
@@ -52,14 +50,12 @@
   <tr>
     <div class="card">
       <td>
-        <table cellpadding="20">
+        <table cellpadding="20" width="100%">
           <tr>
             <td><span id="titre"><b>Dernière activité</b></span></td>
           </tr>
           <tr>
             <td>
-              <p>Dernier service rendu : <!-- type et date --></p>
-              <p>Dernier service demandé : <!-- type et date --></p>
               <app-services-experience [id_user]="id"
                                        style="width: 100%;">
               </app-services-experience>
@@ -71,15 +67,6 @@
   </tr>
 </table>
 
-  <!-- pour les anciens services -->
-    <div id="experience-wrapper">
-    <table width="1500px">
-      <tr align="center">
-        <td width="100%" align="center">
-        </td>
-      </tr>
-    </table>
-  </div>
 
 
 </div>
