--- a/pfirst/src/app/modal-history/modal-history.component.html
+++ b/pfirst/src/app/modal-history/modal-history.component.html
@@ -3,10 +3,10 @@
     <table cellpadding="10">
       <tr>
         <td>
-    <button class="btn btn-primary" (click)="setFor()">Pour vous</button>
+    <button class="btn btn-primary" (click)="setFor()">Demandés</button>
         </td>
         <td>
-    <button class="btn btn-primary" (click)="setBy()">Par vous</button>
+    <button class="btn btn-primary" (click)="setBy()">Rendus</button>
         </td>
       </tr>
     </table>
