--- a/pfirst/src/app/new-menage/new-menage.component.html
+++ b/pfirst/src/app/new-menage/new-menage.component.html
@@ -14,12 +14,10 @@
               <!--#############DISPO######################-->
               <div class= "form-group">
                 <label for="datejour"> <h2>Date et heure</h2></label>
-                <label for="datejour">Jour</label>
+                <p>Jour</p>
               <input type="date" id="datejour" class="form-control" formControlName="datejour" [min]="this.date" >
               <label for="dateheure">Heure</label>
                 <input type="time" id="dateheure" class="form-control" formControlName="dateheure" >
-
-                <button  type="button" id = "location-button"  (click)= "getDate()" class="btn btn-secondary" >Get date</button>
                 
               </div>
               
@@ -44,7 +42,9 @@
                 <label for ="adress" ><h3>Adresse</h3></label>
                 <input type="text" id="adress" class="form-control" formControlName="adress">
                 <label for ="location" ><h3>Localisation</h3></label>
-                <button  type="button" id = "location-button"  (click)= "loca=true" class="btn btn-secondary" >Get your position</button>
+                <button  type="button" id = "location-button"  (click)= "getLatLng()" class="btn btn-secondary" >Get your position</button>
+                <p>You are here {{this.latitude}} -- {{this.longitude}}</p>
+                
                   
                 
               </div>
