Auteur/Participants ok, mise a jour dans modal en cours #30

--- a/pfirst/src/app/former-service/former-service.component.html
+++ b/pfirst/src/app/former-service/former-service.component.html
@@ -2,8 +2,11 @@
   <tr>
     <td>
       <mat-toolbar color="blue">
-        <mat-toolbar-row>
+        <mat-toolbar-row *ngIf="!helperLook">
           Participants
+        </mat-toolbar-row>
+        <mat-toolbar-row *ngIf="helperLook">
+          Auteur
         </mat-toolbar-row>
       </mat-toolbar>
       <div *ngFor="let participant of participants">
