--- a/pfirst/src/app/profil/profil.component.html
+++ b/pfirst/src/app/profil/profil.component.html
@@ -56,7 +56,7 @@
           </tr>
           <tr>
             <td>
-              <app-services-experience [id_user]="id"
+              <app-services-experience
                                        style="width: 100%;">
               </app-services-experience>
             </td>
