--- a/pfirst/src/app/modal-history/modal-history.component.html
+++ b/pfirst/src/app/modal-history/modal-history.component.html
@@ -16,10 +16,11 @@
     <div id="for-wrapper" *ngIf="showFor && (history_for.length > 0)">
       <app-former-service [helperLook]="false"
                           [pour]="myName"
-                          [par]="this.history_for[index_for].content.user"
+                          [par]="history_for[index_for].content.user"
                           [announceId]="history_for[index_for].idAnnounce"
                           [imgSrc]="history_for[index_for].content.image"
-                          [date]="this.history_for[index_for].content.datejour">
+                          [announceAuthorId]="history_for[index_for].idUser"
+                          [date]="history_for[index_for].content.datejour">
       </app-former-service>
     </div>
     <div id="by-wrapper" *ngIf="showBy && (history_by.length > 0)">
@@ -27,6 +28,7 @@
                             [pour]="this.history_by[index_by].content.user"
                             [par]="myName"
                             [announceId]="history_by[index_by].idAnnounce"
+                            [announceAuthorId]="history_by[index_by].idUser"
                             [imgSrc]="history_by[index_by].content.image"
                             [date]="this.history_by[index_by].content.datejour">
         </app-former-service>
