fonction pour delete une annonce, à tester #4

--- a/pfirst/src/app/modal-are-you-sure/modal-are-you-sure.component.html
+++ b/pfirst/src/app/modal-are-you-sure/modal-are-you-sure.component.html
@@ -1,6 +1,6 @@
 <table align="center">
   <tr> <td><h1>Êtes-vous sûr de vouloir supprimer ce service ?</h1></td> </tr>
   <tr>
-    <td align="center"><button class="btn btn-danger" (click)="suiviServ.deleteAnnounce(this.suiviServ.serviceId_selected)">Supprimer</button></td>
+    <td align="center"><button class="btn btn-danger" (click)="this.deleteAnnounce()">Supprimer</button></td>
   </tr>
 </table>
