geoloc working on menage-courses-cuisine but dubble services in db

--- a/pfirst/src/app/new-cuisine/new-cuisine.component.html
+++ b/pfirst/src/app/new-cuisine/new-cuisine.component.html
@@ -35,7 +35,7 @@
                 <label for ="adress" ><h3>Adresse</h3></label>
                 <input type="text" id="adress" class="form-control" formControlName="adress">
                 <label for ="location" ><h3>Localisation</h3></label>
-                <button  type="button" id = "location-button"  (click)= "loca=true" class="btn btn-secondary" >Get your position</button>     
+                <button  type="button" id = "location-button"  (click)= "getLocation()" class="btn btn-secondary" >Get your position</button>     
                 
                 
 
