--- a/pfirst/src/app/new-menage/new-menage.component.html
+++ b/pfirst/src/app/new-menage/new-menage.component.html
@@ -42,8 +42,8 @@
                 <label for ="adress" ><h3>Adresse</h3></label>
                 <input type="text" id="adress" class="form-control" formControlName="adress">
                 <label for ="location" ><h3>Localisation</h3></label>
-                <button  type="button" id = "location-button"  (click)= "getLatLng()" class="btn btn-secondary" >Get your position</button>
-                <p>You are here {{this.latitude}} -- {{this.longitude}}</p>
+                <button  type="button" id = "location-button"  (click)= "getLocation()" class="btn btn-secondary" >Get your position</button>
+                
                 
                   
                 
