ajout des photos user a noter #19

--- a/pfirst/src/app/review/review.component.css
+++ b/pfirst/src/app/review/review.component.css
@@ -13,3 +13,13 @@
   font-size: 200%;
   color: goldenrod;
 }
+
+.pdpIcon {
+  border-radius: 50%;
+  width: 100px;
+  height: 100px;
+  position: relative;
+  left: 65%;
+  background-size: cover;
+  cursor: pointer;
+}
