--- a/pfirst/src/app/review/review.component.html
+++ b/pfirst/src/app/review/review.component.html
@@ -13,6 +13,7 @@
           <div class="col-sm-8 col-sm-offset-2">
 
             <form (ngSubmit)="onSubmitReview(f,oneParticipant)" #f="ngForm">
+              <div class="pdpIcon" [ngStyle]="{}"
               <div class="form-group">
                 <!-- ##################### Commentaire ####################-->
                 <div class="jumbotron" id="formulaire">
