--- a/pfirst/src/app/former-service/former-service.component.html
+++ b/pfirst/src/app/former-service/former-service.component.html
@@ -1,7 +1,7 @@
 <table cellpadding="5" width="100%">
   <tr>
     <td>
-      <mat-toolbar style="background-color: dodgerblue; color: black">
+      <mat-toolbar style="background-color: black; color: white">
         <mat-toolbar-row *ngIf="!helperLook">
           <b>Participants</b>
         </mat-toolbar-row>
