--- a/pfirst/src/app/modal-history/modal-history.component.html
+++ b/pfirst/src/app/modal-history/modal-history.component.html
@@ -38,10 +38,10 @@
     <table cellpadding="10" width="1000px">
       <tr>
         <td align="left">
-          <button class="btn btn-primary" (click)="decIndex(); getReview()">Précédent</button>
+          <button class="btn btn-primary" (click)="incIndex(); getReview()">Précédent</button>
         </td>
         <td align="right">
-          <button class="btn btn-primary" (click)="incIndex(); getReview()">Suivant</button>
+          <button class="btn btn-primary" (click)="decIndex(); getReview()">Suivant</button>
         </td>
       </tr>
     </table>
