--- a/pfirst/src/app/former-service/former-service.component.html
+++ b/pfirst/src/app/former-service/former-service.component.html
@@ -19,7 +19,7 @@
             <mat-icon class="actionIcon"> done</mat-icon>
             -->
             <button style="padding: 5px 14px; margin-left: 10px" class="btn btn-primary" (click)="goToProfil(participant)">Profil</button>
-            <button style="padding: 5px 14px; margin-left: 10px" class="btn btn-primary" (click)="toggleShowReview(participant); getReview(participant);">Evaluation</button>
+            <button style="padding: 5px 14px; margin-left: 10px" class="btn btn-primary" (click)="toggleShowReview(participant); getReview(participant); logDICOREV()">Evaluation</button>
           </mat-toolbar-row>
           <mat-toolbar-row *ngIf="idToShowReview[participant]">
             <mat-icon>keyboard_arrow_right</mat-icon>
